--- a/vignettes/cytofWorkflow.Rmd
+++ b/vignettes/cytofWorkflow.Rmd
@@ -32,7 +32,7 @@ author:
 #     address: SIB Swiss Institute of Bioinformatics, University of Zurich, 8057 Zurich, Switzerland
 #   - code: 2
 #     address: Institute of Experimental Immunology, University of Zurich, 8057 Zurich, Switzerland
-abstract: High dimensional (mass and flow) cytometry (HDCyto) experiments have become a method of choice for interrogating and characterizing cell populations at high throughput. Here, we present a R-based pipeline for differential analyses of HDCyto data, largely based on Bioconductor packages.  We computationally define cell populatios using FlowSOM clustering, allowing for optional but reproducible manual merging. There are several differential analyses of interest the differences in cell type abundance that are associated with a phenotype, or differences in signaling markers within specific subpopulations or differential analyses of aggregrated signals.  Importantly, the differential analyses we show are based on regression frameworks where the HDCyto data is the response; thus, we are able to model arbitrary designs, such as those with batch effects, paired designs, etc.  In particular, we apply generalized linear mixed models for analyses of cell population abundance or cell-population-specific analyses of signaling markers, allowing overdispersion in cells count or aggregated signal across samples to be appropriately modeled.  To support the formal statistical analyses, we include various visualizations at every step of the analysis, including for quality control (e.g., multi-dimensional scaling  plots), for reporting of clustering results (dimensionality reduction, heatmaps with dendrograms) and for differential analyses (e.g., plots of aggregated signal).
+abstract: High dimensional (mass and flow) cytometry (HDCyto) experiments have become a method of choice for interrogating and characterizing complex and rare cell populations. Here, we present an R-based pipeline for differential analyses of HDCyto data, largely based on Bioconductor packages.  We computationally define cell populatios using FlowSOM clustering, allowing for optional but reproducible manual merging but also allowing for machine-assisted clusters number seclection using consensus clustering. We offer different analysis such as differences in cell type abundance, phenotypic characterization, or differences in marker expression within specific subpopulations or aggregrated signal moliecules.  Importantly, the differential analyses we show are based on regression frameworks where the HDCyto data is the response; thus, we are able to model arbitrary designs, such as those with batch effects, paired designs, etc.  In particular, we apply a generalized linear mixed models for the analysis of cell population abundance or cell-population-specific signaling markers, allowing overdispersion in cells count or aggregated signal across samples to be appropriately modeled.  To support the formal statistical analyses, we include various visualization options at every step of the analysis, including for quality control (e.g., multi-dimensional scaling  plots), reporting of clustering results (dimensionality reduction, heatmaps with dendrograms) and for differential analyses (e.g., plots of aggregated signal).
 documentclass: extarticle
 fontsize: 10pt
 papersize: a4
