--- a/vignettes/cytofWorkflow.Rmd
+++ b/vignettes/cytofWorkflow.Rmd
@@ -32,7 +32,7 @@ author:
 #     address: SIB Swiss Institute of Bioinformatics, University of Zurich, 8057 Zurich, Switzerland
 #   - code: 2
 #     address: Institute of Experimental Immunology, University of Zurich, 8057 Zurich, Switzerland
-abstract: High dimensional (mass and flow) cytometry (HDCyto) experiments have become a method of choice for interrogating and characterizing complex and rare cell populations. Here, we present an R-based pipeline for differential analyses of HDCyto data, largely based on Bioconductor packages.  We computationally define cell populatios using FlowSOM clustering, allowing for optional but reproducible manual merging but also allowing for machine-assisted clusters number seclection using consensus clustering. We offer different analysis such as differences in cell type abundance, phenotypic characterization, or differences in marker expression within specific subpopulations or aggregrated signal moliecules.  Importantly, the differential analyses we show are based on regression frameworks where the HDCyto data is the response; thus, we are able to model arbitrary designs, such as those with batch effects, paired designs, etc.  In particular, we apply a generalized linear mixed models for the analysis of cell population abundance or cell-population-specific signaling markers, allowing overdispersion in cells count or aggregated signal across samples to be appropriately modeled.  To support the formal statistical analyses, we include various visualization options at every step of the analysis, including for quality control (e.g., multi-dimensional scaling  plots), reporting of clustering results (dimensionality reduction, heatmaps with dendrograms) and for differential analyses (e.g., plots of aggregated signal).
+abstract: High dimensional (mass and flow) cytometry (HiDimCyto) experiments have become a method of choice for interrogating and characterizing complex and rare cell populations. Here, we present an R-based pipeline for the differential analysis of HiDimCyto data, largely based on Bioconductor packages.  We computationally define cell populations using FlowSOM clustering using machine-assisted clusters number selection by using consensus clustering but also allowing for optional but reproducible manual merging. Our workflow offers different analysis options such as comparing differences in cell type abundance, phenotypic characterization, comparing marker expression within specific subpopulations or analysing differences in signal molecules.  Importantly, the differential analyses we implemented are based on regression frameworks where the HiDimCyto data is the response; thus, we are able to model arbitrary designs, such as batch effects, paired designs, etc.  In particular, we apply a generalized linear mixed models for the analysis of cell population abundance or cell-population-specific signaling markers, allowing overdispersion in cells count or aggregated signal across samples to be appropriately modeled.  To support the formal statistical analyses, we include various visualization options at every step of the analysis, including for quality control (e.g., multi-dimensional scaling  plots), reporting of clustering results (dimensionality reduction, heatmaps with dendrograms) and for differential analyses (e.g., plots of aggregated signal).
 documentclass: extarticle
 fontsize: 10pt
 papersize: a4
@@ -66,15 +66,15 @@ knitr::opts_chunk$set(cache = 2, warning = FALSE, message = FALSE, cache.path = 
 
 <!-- Describe what CyTOF and Flow Cytometry are and what are the differences -->
 
-Flow cytometry and the more recently introduced CyTOF (cytometry by time-of-flight mass spectrometry or mass cytometry) are technologies that measure protein abundance on the surface or inside cells at high-throughput. 
+Flow cytometry and the more recently introduced CyTOF (cytometry by time-of-flight mass spectrometry or mass cytometry) are technologies that measure protein abundance on the surface or inside cells. 
 In flow cytometry, antibodies are labeled with fluorescent dyes. For each cell, the intensity of fluorescent parameters is measured using lasers and photodetectors. 
 CyTOF utilizes antibodies tagged with metal isotopes from the lanthanide series, which have favourable chemistry and do not occur in biological systems; abundances per cell are recorded with a time-of-flight mass spectrometer. 
 In either case, fluorescence intensities (flow cytometry) or ion counts (mass cytometry) are assumed to be proportional to the expression level of the antibody-targeted antigens of interest.
 
 Due to the differences in acquistion, further distinct characteristics should be noted.
-Classical fluorophore-based flow cytometry is non-destructive and thus can be used to sort cells for further analysis. However, because of the spectral overlap between fluorophores, *compensation* of the data needs to be performed [@Roederer2001], which also limits the number of parameters that can be measured at once. Standard flow cytometry experiments measure 6-12 parameters, but new developments (e.g., BD FACSymphony) increase this capacity towards 50 markers. Moreover, flow cytometry offers the highest throughput with more than 10,000 cells measured per second at relatively low operating costs per sample.
+Classical fluorophore-based flow cytometry is non-destructive and thus can be used to sort cells for further analysis. However, because of the spectral overlap between fluorophores, *compensation* of the data needs to be performed [@Roederer2001], which also limits the number of parameters that can be measured at once. Standard flow cytometry experiments measure 6-12 parameters, todays most sophisticated flow cytometers can measure upt to 20 parameters [Mahnke, Roederer Clin Lab Med 2007] but new developments (e.g., BD FACSymphony) might increase this capacity towards 50 markers. Moreover, flow cytometry offers the highest throughput with more than 10,000 cells measured per second at currently relatively low operating costs per sample.
 
-By using rare metal isotopes in CyTOF, cell autofluorescence is avoided and spectral overlap is drastically reduced.  However, Leipold et al. commented that *minimal spillover does not equal no spillover* [@Leipold2015] and depending on the panel design, some considerations need to be made.  Meanwhile, in CyTOF a greater number of parameters per cell can be detected, with current panels using around 40 parameters and promise of up to 100 channels. However, the throughput of CyTOF is lower, at the rate of hundreds of cells per second, and cells are destroyed during the mass spectrometry step.
+By using rare metal isotopes in CyTOF, cell autofluorescence is avoided and spectral overlap is drastically reduced although metal impurities need to be carefully considered.  However, Leipold et al. commented that *minimal spillover does not equal no spillover* [@Leipold2015] and depending on the panel design, some considerations need to be made.  Meanwhile, in CyTOF a greater number of parameters per cell can be detected, with current panels using around 40 parameters and promise of up to 100 channels. However, the throughput of CyTOF is lower, at the rate of hundreds of cells per second, and cells are destroyed during the mass spectrometry step.
 
 <!-- Application -->
 
@@ -92,7 +92,7 @@ A new approach, `CellCnn` [@Arvaniti2016], learns the representation of clusters
 Due to its computational requirements, `Citrus` can not be run on entire mass cytometry datasets and one typically must analyze a subset of the data.  
 [!!!] The filters from `CellCnn` may identify one or more cell subsets that distinguish experimental groups, while these groups may not necessarily correspond to any of the canonical cell types, since they are learned with a data-driven approach.
 
-A noticeable distinction between these approaches and the classical approach is how the model is designed. `Citrus`/`CellCnn`  model the patient response as a function of the measured HDCyto values, whereas the classical approach models the HDCyto data itself as the response, with the distinct advantage that covariates, in addition to the predictors of interest, can be directly accounted for.  In particular, neither `Citrus` nor `CellCnn` are able to directly account for more complex designs, such as paired experiments or presence of batches.
+A noticeable distinction between these approaches and the classical approach is how the model is designed. `Citrus`/`CellCnn`  model the patient response as a function of the measured HiDimCyto values, whereas the classical approach models the HiDimCyto data itself as the response, with the distinct advantage that covariates, in addition to the predictors of interest, can be directly accounted for.  In particular, neither `Citrus` nor `CellCnn` are able to directly account for more complex designs, such as paired experiments or presence of batches.
 While the ability to model arbitrary experimental designs for differential analysis is quite important and can be addressed with the classic approach.
 
 [!!!] `Citrus` does not provide significance levels, such as p-values, for the strength of associations. 
@@ -123,13 +123,11 @@ In both the Bodenmiller et al. and `Citrus` manuscripts, the 10 lineage markers 
 
 
 # Data preprocessing
-
-The preprocessing steps including normalization using bead standards, debarcoding and compensation can be completed with the `r Githubpkg("HelenaLC/CATALYST")` package.
-It provides an R implementation of the bead based normalization described by Finck *et al.* [@Finck2013].
-The debarciding is cunducted with the single-cell deconvolution algorithm described by Zunder *et al.* [@Zunder2015]. During this step also cell doublets are identified and removed from the analysis.
+Conventional flow cytometers and mass cytometers put out *fcs files which can be mamually analyzed using programs such as FlowJo [TriStar]. During this initial analysis step dead cells are removed, compensation is checked and with very simple two dimensional dot plots (marker intesity versus time) marker expression patterns are checked. Mostly this is done on normalized debarcoded samples in oder to remove analytical biasis due to individual sample variation or acquisition time.
+Preprocessing steps including normalization using bead standards, debarcoding and compensation can be completed with the `r Githubpkg("HelenaLC/CATALYST")` package. The package provides an R implementation of the bead based normalization described by Finck *et al.* [@Finck2013].
+The debarcoding is conducted with the single-cell deconvolution algorithm described by Zunder *et al.* [@Zunder2015]. During this step also cell doublets are identified and removed from the analysis.
 Finally, compensation is performed via a two-step algorithm, which first uses single-cell debarcoding of single-stained beads to identify single positive populations. Second, it estimates a spillover matrix from the identified populations and its inverse, called a compensation matrix, is used to compensate the observed intensities.
 
-[!!!] Removal of debris and dead cells?
 
 # Data importing
 
